--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/ListingResult/result.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/ListingResult/result.html.twig
@@ -159,7 +159,7 @@
                                                 <h2>{{ listing_translation.title }}</h2>
 
                                                 <p>{{ listing_location["city"] }} </p>
-                                                <p>
+                                                <p class="sub">
                                                     {{ vatInclusionText(app.request.getLocale()) }}
                                                         / {{ (0)|add_time_unit_text }}
                                                 </p>
