--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
@@ -8,28 +8,30 @@
 {%- endblock %}
 
 {% block content_dashboard -%}
-    <fieldset>
-        <legend class="hidden">form area</legend>
-        <div id="dishes-form-container">
-            <div class="collection">
-                {% if app.request.isXmlHttpRequest %}
-                    {% include 'CocoricoCoreBundle:Frontend/Common:_flash.html.twig' %}
-                {% endif %}
 
-                {{ form_start(form) }}
-                {{ form_errors(form) }}
+    <div class="collection">
+        {% if app.request.isXmlHttpRequest %}
+            {% include 'CocoricoCoreBundle:Frontend/Common:_flash.html.twig' %}
+        {% endif %}
 
-                {% for listingListingCharacteristic in form.listingListingCharacteristicsOrderedByGroup %}
-                    {{ form_widget(listingListingCharacteristic.translations) }}
-                {% endfor %}
-
-                <div class="btn-block text-center">
-                    <button type="submit" class="btn btn-default">{{ 'listing.price_save'|trans }}</button>
+        {{ form_start(form) }}
+        <div class="form-area">
+            <div class="tab-content">
+                <div class="tab-pane active">
+                    <div class="clearfix"></div>
+                    <legend class="hidden">form area</legend>
+                    <div id="dishes-form-container" class="form-holder">
+                        {{ form_widget(form.listingListingCharacteristicsOrderedByGroup) }}
+                    </div>
                 </div>
-                {{ form_end(form) }}
+            </div>
+            <div class="btn-block text-center">
+                <button type="submit" class="btn btn-default">{{ 'listing.price_save'|trans }}</button>
             </div>
         </div>
-    </fieldset>
+
+        {{ form_end(form) }}
+    </div>
 {%- endblock %}
 
 {% block javascripts %}
