--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
@@ -91,16 +91,16 @@
     <footer id="footer" class="container text-center">
         <div class="row">
             <div class="col-xs-12">
-                <a href="{{ path('cocorico_page_show', { 'slug': 'nav.legal_notices.slug'|trans }) }}"
-                   class="by pull-right">
-                    {{ 'footer.legal_notices.link'|trans }}
-                </a>
+                {#<a href="{{ path('cocorico_page_show', { 'slug': 'nav.legal_notices.slug'|trans }) }}"#}
+                   {#class="by pull-right">#}
+                    {#{{ 'footer.legal_notices.link'|trans }}#}
+                {#</a>#}
 
-                <a href="http://www.cocolabs.io/fr/"
-                   class="by pull-right credit" target="_blank">
-                    <img src="{{ asset('images/marketplace-solutions.png') }}" width="45" height="15"
-                         alt="creation marketplace">
-                </a>
+                {#<a href="http://www.cocolabs.io/fr/"#}
+                   {#class="by pull-right credit" target="_blank">#}
+                    {#<img src="{{ asset('images/marketplace-solutions.png') }}" width="45" height="15"#}
+                         {#alt="creation marketplace">#}
+                {#</a>#}
 
                 <p>
                     &copy; {{ "now"|date("Y") }} {{ 'footer.all_right_reserved'|trans }}
