fix dashboard logo

--- a/src/Cocorico/SonataAdminBundle/Resources/views/standard_layout.html.twig
+++ b/src/Cocorico/SonataAdminBundle/Resources/views/standard_layout.html.twig
@@ -104,7 +104,7 @@ file that was distributed with this source code.
             {% spaceless %}
                 <a class="logo" href="{{ url('sonata_admin_dashboard') }}">
                     {% if 'single_image' == admin_pool.getOption('title_mode') or 'both' == admin_pool.getOption('title_mode') %}
-                        <img src="{{ asset(admin_pool.title_logo) }}" alt="{{ admin_pool.title }}">
+                        <img src="{{ asset(admin_pool.titlelogo) }}" alt="{{ admin_pool.title }}">
                     {% endif %}
                     {#
                     {% if 'single_text' == admin_pool.getOption('title_mode') or 'both' == admin_pool.getOption('title_mode') %}
