--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
@@ -15,15 +15,53 @@
         {% endif %}
 
         {{ form_start(form) }}
-        <div class="form-area">
+        <div class="form-area form-horizontal">
             <div class="tab-content">
-                <div class="tab-pane active">
-                    <div class="clearfix"></div>
-                    <legend class="hidden">form area</legend>
-                    <div id="dishes-form-container" class="form-holder">
-                        {{ form_widget(form.listingListingCharacteristicsOrderedByGroup) }}
+                <fieldset>
+                    <div class="tab-pane active">
+                        <div class="clearfix"></div>
+                        <legend class="hidden">form area</legend>
+                        <div id="dishes-form-container" class="form-holder">
+                            {% for item in form.listingListingCharacteristicsOrderedByGroup %}
+                                <div class="row panel">
+                                    <div class="">
+                                        <div class="form-group col-sm-6">
+                                            {{ form_label(item.translations) }}
+                                            <div class="col-sm-12">
+                                                {{ form_widget(item.translations) }}
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-sm-6">
+                                            {{ form_row(item.dish_photo) }}
+                                            <div class="pull-right">
+                                                <a href="#" class="thumbnail">
+                                                    <img src="/images/img9.png" style="height:71px">
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-sm-8">
+                                            <div class="col-sm-6">
+                                                {{ form_row(item.listingCharacteristicGroup) }}
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <div class="checkbox">
+                                                    <label for="checkboxes-0">
+                                                        {{ form_row(item.dish_visibility) }}
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <button id="singlebutton" name="singlebutton"
+                                                        onclick="$(this).parents('.row:first').remove();"
+                                                        class="btn btn-danger"><span>Remove</span></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
                     </div>
-                </div>
+                </fieldset>
             </div>
             <div class="btn-block text-center">
                 <button type="submit" class="btn btn-default">{{ 'listing.price_save'|trans }}</button>
@@ -47,6 +85,23 @@
 
             });
         });
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                parent = $(input).parents('.form-group.col-sm-6:first');
+                console.log(parent);
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    image = parent.find('.thumbnail > img').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+        jQuery('#dishes-form-container').on('change', "[id*='_dish_photo']" , function () {
+            readURL(this)
+        })
+
     </script>
 
 {%- endblock %}
