#21271 temp remove main box shadow

--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/layout.html.twig
@@ -5,7 +5,7 @@
 
     <!-- contain main informative part of the site -->
     <main id="main" role="main">
-        <div class="container main-box-shadow">
+        <div class="container">
             <div class="row">
                 {% block breadcrumbs %}{% endblock %}
 
