add dishes list

--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
@@ -35,7 +35,7 @@
                                             {{ form_row(item.dish_photo) }}
                                             <div class="pull-right">
                                                 <a href="#" class="thumbnail">
-                                                    <img src="/images/img9.png" style="height:71px">
+                                                    <img src="{{ item.vars.value.getDishPhoto }}" style="height:71px">
                                                 </a>
                                             </div>
                                         </div>
