#21168 #21133 expires at, number of people

--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/edit_availabilities_prices.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/edit_availabilities_prices.html.twig
@@ -63,6 +63,11 @@
                     </div>
 
                     <div class="form-block">
+                        <h3>{{ 'listing.edit.expires_at.title'|trans }}</h3>
+                        {{ render(controller('CocoricoCoreBundle:Dashboard/Offerer/Listing:expiresAtForm', {'listing': listing})) }}
+                    </div>
+
+                    <div class="form-block">
                         {{ form_start(form_prices, {'attr': {'id': 'prices-form', 'class': 'form'}}) }}
 
                         <!-- price-range -->
