--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_expires_at.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_expires_at.html.twig
@@ -9,19 +9,21 @@
     {{ form_errors(form) }}
 
     <div class="field-row datepicker-holder-ajax">
-        {{ form_errors(form.expires_at) }}
-        <span class="label">{{ form_label(form.expires_at) }}</span>
-
-        <div class="input-append date field-holder">
-                {{ form_widget(form.expires_at, {
-                    'attr': {
-                        'class': 'form-control',
-                        'placeholder': "/      /"
-                    }
-                }) }}
-                <span class="add-on">
-                    <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-calendar"></i>
-                </span>                
+        <div class="col">
+            {{ form_errors(form.expires_at) }}
+            <span class="label">{{ form_label(form.expires_at) }}</span>
+    
+            <div class="input-append date field-holder">
+                    {{ form_widget(form.expires_at, {
+                        'attr': {
+                            'class': 'form-control',
+                            'placeholder': "/      /"
+                        }
+                    }) }}
+                    <span class="add-on">
+                        <i data-date-icon="icon-calendar" data-time-icon="icon-time" class="icon-calendar"></i>
+                    </span>                
+            </div>
         </div>
     </div>
     
