fix files upload

--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/_listing_show_characteristics.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/_listing_show_characteristics.html.twig
@@ -6,7 +6,7 @@
     <!--@formatter:off-->
     {% for characteristic in characterisitics %}
         {% set listingCharacteristic = characteristic.listingCharacteristic %}
-        {% set listingCharacteristicGroup =  listingCharacteristic.listingCharacteristicGroup.getName() %}
+        {% set listingCharacteristicGroup =  characteristic.listingCharacteristicGroup.getName() %}
         {% set listingCharacteristicValue = characteristic.listingCharacteristicValue %}
 
         {#{% if listingCharacteristicValue %}#}
