--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_listing_dish.html.twig
@@ -13,52 +13,61 @@
         {% if app.request.isXmlHttpRequest %}
             {% include 'CocoricoCoreBundle:Frontend/Common:_flash.html.twig' %}
         {% endif %}
-
         {{ form_start(form) }}
         <div class="form-area form-horizontal">
             <div class="tab-content">
+                {#{{ form_widget(form) }}#}
                 <fieldset>
                     <div class="tab-pane active">
                         <div class="clearfix"></div>
                         <legend class="hidden">form area</legend>
-                        <div id="dishes-form-container" class="form-holder">
-                            {% for item in form.listingListingCharacteristicsOrderedByGroup %}
-                                <div class="row panel">
-                                    <div class="">
-                                        <div class="form-group col-sm-6">
-                                            {{ form_label(item.translations) }}
-                                            <div class="col-sm-12">
-                                                {{ form_widget(item.translations) }}
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-sm-6">
-                                            {{ form_row(item.dish_photo) }}
-                                            <div class="pull-right">
-                                                <a href="#" class="thumbnail">
-                                                    <img src="{{ item.vars.value.getDishPhoto }}" style="height:71px">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="form-group col-sm-8">
-                                            <div class="col-sm-6">
-                                                {{ form_row(item.listingCharacteristicGroup) }}
-                                            </div>
-                                            <div class="col-sm-3">
-                                                <div class="checkbox">
-                                                    <label for="checkboxes-0">
-                                                        {{ form_row(item.dish_visibility) }}
-                                                    </label>
+                        <div {#data-prototype="{{ form_widget(form.listingListingCharacteristicsOrderedByGroup.vars.prototype)|e }}"#}>
+                            <div id="dishes-form-container" class="form-holder">
+                                {% for item in form.listingListingCharacteristicsOrderedByGroup %}
+                                    <div class="row panel">
+                                        <div class="">
+                                            <div class="form-group col-sm-6">
+                                                {{ form_label(item.translations) }}
+                                                <div class="col-sm-12">
+                                                    {{ form_widget(item.translations) }}
                                                 </div>
                                             </div>
-                                            <div class="col-sm-3">
-                                                <button id="singlebutton" name="singlebutton"
-                                                        onclick="$(this).parents('.row:first').remove();"
-                                                        class="btn btn-danger"><span>Remove</span></button>
+                                            <div class="form-group col-sm-6">
+                                                {{ form_row(item.dish_photo) }}
+                                                <div class="pull-right">
+                                                    <a href="#" class="thumbnail">
+                                                        <img src="{{ item.vars.value.getDishPhoto }}"
+                                                             style="height:71px">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-sm-8">
+                                                <div class="col-sm-6">
+                                                    {{ form_row(item.listingCharacteristicGroup) }}
+                                                </div>
+                                                <div class="col-sm-3">
+                                                    <div class="checkbox">
+                                                        <label for="checkboxes-0">
+                                                            {{ form_row(item.dish_visibility) }}
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-3">
+                                                    <button id="singlebutton" name="singlebutton"
+                                                            onclick="$(this).parents('.row:first').remove();"
+                                                            class="btn btn-danger"><span>Remove</span></button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            {% endfor %}
+                                {% endfor %}
+                                {#<div class="btn-block text-center collection-add-block">#}
+                                    {#<a class="add" title="Add" href="javascript:void(0)">#}
+                                        {#<div style="display: none;"></div>#}
+                                        {#<span>Add</span>#}
+                                    {#</a>#}
+                                {#</div>#}
+                            </div>
                         </div>
                     </div>
                 </fieldset>
@@ -67,7 +76,6 @@
                 <button type="submit" class="btn btn-default">{{ 'listing.price_save'|trans }}</button>
             </div>
         </div>
-
         {{ form_end(form) }}
     </div>
 {%- endblock %}
@@ -75,16 +83,16 @@
 {% block javascripts %}
     {{ parent() }}
     <script>
-        $(function () {
-            var $formContainer = $("#listing_listingListingCharacteristicsOrderedByGroup");
-            $formContainer.submitAjaxForm(function () {
-                jcf.replaceAll("#listing_listingListingCharacteristicsOrderedByGroup");
-            });
-
-            $formContainer.addFormToCollection("ul.collection", "ul", function () {
-
-            });
-        });
+//        $(function () {
+//            var $formContainer = $(".collection");
+//            $formContainer.submitAjaxForm(function () {
+//                jcf.replaceAll("#listing_listingListingCharacteristicsOrderedByGroup");
+//            });
+//
+//            $formContainer.addFormToCollection('#dishes-form-container', "div.row.panel", function () {
+//
+//            });
+//        });
 
         function readURL(input) {
             if (input.files && input.files[0]) {
@@ -98,7 +106,7 @@
                 reader.readAsDataURL(input.files[0]);
             }
         }
-        jQuery('#dishes-form-container').on('change', "[id*='_dish_photo']" , function () {
+        jQuery('#dishes-form-container').on('change', "[id*='_dish_photo']", function () {
             readURL(this)
         })
 
