--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Booking/new.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Booking/new.html.twig
@@ -100,7 +100,11 @@
                                     <strong> {{ 'booking.duration:'|trans }}</strong>
                                     {{ booking_duration|add_time_unit_text }}
                                 </li>
-
+                                
+                                <li>
+                                    {{ form_label(form.number_of_people, null, {'required': false}) }}
+                                    : <strong>{{ booking.numberOfPeople }}</strong>
+                                </li>
                                 {% if not timeUnitIsDay %}
                                     {{ form_widget(form.time_range) }}
                                 {% endif %}
