--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/_listing_show_characteristics.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/_listing_show_characteristics.html.twig
@@ -20,7 +20,7 @@
 
             <li>
                 {% if listingCharacteristic.getDescription() %}
-                    <button title="" data-original-title="{{ "<img style='max-width:550px;max-height:550px' src='" ~ characteristic.getDishPhoto() ~ "'/>" }}" data-placement="right" data-toggle="tooltip" class="tooltip-button" type="button">?</button>
+                    <button title="" data-original-title="{{ "<img style='max-width:100%;max-height:100%' src='" ~ characteristic.getDishPhoto() ~ "'/>" }}" data-placement="right" data-toggle="tooltip" class="tooltip-button" type="button">?</button>
                 {% endif %}
                 {#{{ listingCharacteristic.getName() }} :#}
                 <strong>{{ characteristic.getTitle() }}</strong>
