--- a/web/css/all.css
+++ b/web/css/all.css
@@ -7555,7 +7555,7 @@ span.btn:focus {
     padding: 0;
     display: inline-block;
     vertical-align: top;
-    width: 15px;
+    width: 25px;
     height: 20px;
     overflow: hidden;
     font-size: 0;
@@ -7565,7 +7565,7 @@ span.btn:focus {
     border-radius: 100%;
     text-align: left !important;
     text-indent: -9999px !important;
-    background: url(../images/icon_info.png) no-repeat;
+    background: url(../images/no-image-icon.png) no-repeat;
 }
 
 .tooltip-inner {
