--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_price_simulator.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/form_price_simulator.html.twig
@@ -12,11 +12,21 @@
     {{ form_errors(form) }}
 
     <div class="price-area">
-        {{ form_widget(form.date_range) }}
-
-        {% if not timeUnitIsDay %}
-            {{ form_widget(form.time_range) }}
-        {% endif %}
+        <div class="field_row">
+            {{ form_widget(form.date_range) }}
+    
+            {% if not timeUnitIsDay %}
+                {{ form_widget(form.time_range) }}
+            {% endif %}
+        </div>
+        <div class="field_row">
+            {{ form_errors(form.number_of_people) }}
+            <span class="label">{{ form_label(form.number_of_people) }}</span>
+            <div class="select-holder number-of-people-holder">
+                {{ form_widget(form.number_of_people) }}
+            </div>    
+        </div>                
+        
     </div>
 
     <div class="add-info">
