--- a/web/css/all-override.css
+++ b/web/css/all-override.css
@@ -2604,12 +2604,11 @@ ul.collection {
     margin-top: -45px;
 }
 
-#max-bookings-form-container .field-row,
- .field-row
+#max-bookings-form-container .field-row
 {
     max-width: 235px;
 }
-#expires-at-form-container
+#expires-at-form-container .field-row
 {
     max-width: 275px;
 }
@@ -2635,4 +2634,56 @@ ul.collection {
     cursor: pointer;
     font-size: 25px;
     line-height: 34px;
+}
+#price-simulator-form .datepicker-holder-ajax,
+#price-simulator-form .timepicker-holder-ajax
+{
+    width: 47%;
+}
+
+#price-simulator-form .field_row
+{
+    height: 45px;
+}
+
+
+#price-simulator-form .datepicker-holder-ajax .col,
+#price-simulator-form .timepicker-holder-ajax .col
+{
+    width: 100%;
+}
+
+#price-simulator-form .datepicker-holder-ajax
+{
+    float: left;
+}
+
+#price-simulator-form .timepicker-holder-ajax
+{
+    float: right;
+    margin-top: 0;
+}
+
+#price-simulator-form .timepicker-holder-ajax .col:last-child label
+{
+    display: none;    
+}
+
+#price-simulator-form #number_of_people
+{
+    display: none;
+}
+
+#price-simulator-form .number-of-people-holder 
+{
+    clear: none;
+}
+#price-simulator-form .number-of-people-holder .jcf-select
+{
+    width: 100px;
+}
+
+#price-simulator-form .price-area
+{
+    margin-bottom: 0;
 }
